--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+## Keys and Secrets
+Uno/Uno/GoogleService-Info.plist
+
 ## Build generated
 build/
 DerivedData/
